terraform_0.12.x/2. EC2/2. WEB Server with ALB/EC2-SG-ALB-WEB.tf
# bastion instance Security Group
resource "aws_security_group" "web-alb-sg" {
  name   = "web-alb-sg"
  vpc_id = data.terraform_remote_state.vpc_data.outputs.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "WEB-ALB-SG"
  }
}
